--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 	<head>
 		<meta charset="utf-8" />
-		<!-- 
 		<script src="dw.js"></script>
+		<!-- 
 		<script src="/tmp/writeCapture/support/nolib-support.js"></script>
 		<script src="/tmp/writeCapture/lib/jquery-1.3.2.js"></script>
 		<script src="/tmp/writeCapture/writeCapture.js"></script>
@@ -25,7 +25,9 @@
 			<script>
 				document.write("<li>4<ul>");
 				document.write("<li>4.1</li>", "<li>4.2</li>");
-				document.write("  </ul></li>");
+				document.write("<script>");
+				document.write("document.write('<li>4.3</li>')");
+				document.write("</scr" + "ipt>");
 			</script>
 
 			<script>
@@ -55,9 +57,9 @@
 		
 		<script>
 			setTimeout(function() {
-				//document.write("wtf");
-				//document.writeTo(document.getElementById("li1"), "<script src='1.js'></scr" + "ipt>");
-			}, 100);
+				document.write("wtf");
+				document.writeTo(document.getElementById("li1"), "<script src='1.js'></scr" + "ipt>");
+			}, 10);
 		</script>
 	</body>
 </html>
