--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 		<meta charset="utf-8" />
 		<script src="dw.js"></script>
 		<!-- 
+		<script src="/git/postscribe/htmlParser/htmlParser.js"></script>
+		<script src="/git/postscribe/postscribe.js"></script>
 		-->
 	</head>
 	<body>
@@ -49,7 +51,11 @@
 				document.write("<li>11</li>");
 			</script>
 
-			<li>12</li>
+			<script>
+				document.write("<li>12<input /></li>");
+			</script>
+
+			<li>13</li>
 		</ul>
 		
 		<script>
